--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,6 +14,10 @@ p {
     color: rgb(48, 40, 40);
 }
 
+table, td {
+    border: solid;
+}
+
 #sales-data {
     font-family: Arial, sans-serif;
     color: rgb(71, 168, 168);
@@ -42,3 +46,4 @@ p {
     margin-right: auto;
     width: 50%;
   }
+
